[gd_scene load_steps=6 format=3 uid="uid://dq1wmmodk3atu"]

[ext_resource type="Script" path="res://scripts/ShotgunBullet.gd" id="1_wwcva"]
[ext_resource type="Script" path="res://compo/HitboxComponent.gd" id="2_bm7fc"]

[sub_resource type="Gradient" id="Gradient_gi5t5"]
offsets = PackedFloat32Array(1)
colors = PackedColorArray(1, 1, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_iq5gg"]
gradient = SubResource("Gradient_gi5t5")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yiaa6"]
size = Vector2(21, 4)

[node name="ShotgunBullet" type="Node2D"]
script = ExtResource("1_wwcva")

[node name="Image" type="Sprite2D" parent="."]
position = Vector2(1.49012e-08, 5.68434e-14)
scale = Vector2(0.320313, 0.059875)
texture = SubResource("GradientTexture2D_iq5gg")

[node name="HitboxComponent" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 2
script = ExtResource("2_bm7fc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent"]
shape = SubResource("RectangleShape2D_yiaa6")

[node name="Lifetime" type="Timer" parent="."]
wait_time = 0.4
one_shot = true
autostart = true

[connection signal="area_entered" from="HitboxComponent" to="." method="_on_hitbox_component_area_entered"]
[connection signal="timeout" from="Lifetime" to="." method="_on_lifetime_timeout"]
